# weather-data-pipeline-sv

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: ingest_forecasts_dag.py  ingest_observations_dag.py  transform_weather_dag.py
scripts/: load_postal_codes_berlin.py
sql/: schema.sql
src/api/: main.py
src/api/endpoints/: health.py  weather.py
src/ingestion/: brightsky_client.py  forecasts.py  observations.py
src/transformation/: aggregation.py  cleaning.py  transform.py
src/utils/: __init__.py  dag_helpers.py  stations.py
